# axum_mail

./: Cargo.toml
src/: main.rs
