[package]
name = "axum_mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tokio"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.0.3 ", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
lettre = "0.10.4"
reqwest = { version = "0.11.18", features = ["multipart", "rustls", "json"] }
anyhow = "1.0.71"